@@ -3,7 +3,6 @@ package org.geogebra.common.euclidian;
 import java.util.ArrayList;
 
 import org.geogebra.common.awt.GBasicStroke;
-import org.geogebra.common.awt.GBufferedImage;
 import org.geogebra.common.awt.GColor;
 import org.geogebra.common.awt.GDimension;
 import org.geogebra.common.awt.GFont;
@@ -11,7 +10,6 @@ import org.geogebra.common.awt.GFontRenderContext;
 import org.geogebra.common.awt.GGraphics2D;
 import org.geogebra.common.awt.GPoint;
 import org.geogebra.common.awt.GRectangle;
-import org.geogebra.common.awt.GShape;
 import org.geogebra.common.awt.font.GTextLayout;
 import org.geogebra.common.factories.AwtFactory;
 import org.geogebra.common.kernel.geos.GeoText;
@@ -26,21 +24,18 @@ import org.geogebra.common.util.StringUtil;
  *
  *         Abstract class for EuclidianStatic
  */
-public abstract class EuclidianStatic {
+public class EuclidianStatic {
 	/**
 	 * need to clip just outside the viewing area when drawing eg vectors as a
 	 * near-horizontal thick vector isn't drawn correctly otherwise
 	 */
 	public static final int CLIP_DISTANCE = 5;
-	/**
-	 * Prototype decides what implementation will be used for static methods
-	 */
-	public static EuclidianStatic prototype;
+
 	/** standardstroke */
-	protected static final GBasicStroke standardStroke = AwtFactory.prototype
+	protected static final GBasicStroke standardStroke = AwtFactory.getPrototype()
 			.newMyBasicStroke(1.0f);
 	/** stroke for selected geos */
-	protected static final GBasicStroke selStroke = AwtFactory.prototype
+	protected static final GBasicStroke selStroke = AwtFactory.getPrototype()
 			.newMyBasicStroke(1.0f + EuclidianStyleConstants.SELECTION_ADD);
 
 	/**
@@ -71,7 +66,7 @@ public abstract class EuclidianStatic {
 			GFontRenderContext frc) {
 		if (str.equals(""))
 			return 0f;
-		GTextLayout layout = AwtFactory.prototype
+		GTextLayout layout = AwtFactory.getPrototype()
 				.newTextLayout(str, font, frc);
 		return layout.getAdvance();
 
@@ -125,74 +120,16 @@ public abstract class EuclidianStatic {
 		int endCap = dash != null ? GBasicStroke.CAP_BUTT : standardStroke
 				.getEndCap();
 
-		return AwtFactory.prototype.newBasicStroke(
+		return AwtFactory.getPrototype().newBasicStroke(
 				width, endCap, standardStroke.getLineJoin(),
 				standardStroke.getMiterLimit(), dash, 0.0f);
-	}
-
-	/**
-	 * Adds \\- to positions where the line can be broken. Now it only breaks at
-	 * +, -, * and spaces.
-	 * 
-	 * @param latex
-	 *            String
-	 * @return The LaTeX string with breaks
-	 */
-	protected static String addPossibleBreaks(String latex) {
-		StringBuilder latexTmp = new StringBuilder(latex);
-		int depth = 0;
-		boolean no_addition = true;
-		for (int i = 0; i < latexTmp.length() - 2; i++) {
-			char character = latexTmp.charAt(i);
-			switch (character) {
-			case '(':
-			case '[':
-			case '{':
-				depth++;
-				break;
-			case ')':
-			case ']':
-			case '}':
-				depth--;
-				break;
-			case '\\':
-				if (latexTmp.charAt(i + 1) != ';')
-					break;
-				i++;
-				latexTmp.insert(i + 1, "\\?");
-				i = i + 2;
-				break;
-			case ' ':
-				if (latexTmp.charAt(i + 1) != ' ')
-					break;
-				i++;
-			case '*':
-				if (depth != 0)
-					break;
-				latexTmp.insert(i + 1, "\\?");
-				i = i + 2;
-				break;
-			case '+':
-			case '-':
-				if (depth != 0)
-					break;
-				latexTmp.insert(i + 1, "\\-");
-				i = i + 2;
-				no_addition = false;
-			}
-		}
-		// no addition happened at depth zero so it can be broken
-		// on * and space too.
-		if (no_addition) {
-			return latexTmp.toString().replaceAll("\\?", "\\-");
-		}
-		return latexTmp.toString().replaceAll("\\?", "");
 	}
 
 	/*
 	 * public abstract float textWidth(String str, Font font, FontRenderContext
 	 * frc);
 	 */
+
 
 	/**
 	 * Draw a multiline LaTeX label.
@@ -226,42 +163,6 @@ public abstract class EuclidianStatic {
 			GGraphics2D tempGraphics, GeoElementND geo, GGraphics2D g2,
 			GFont font, GColor fgColor, GColor bgColor, String labelDesc,
 			int xLabel, int yLabel, boolean serif, Runnable callback) {
-		return prototype.doDrawMultilineLaTeX(app, tempGraphics, geo, g2, font,
-				fgColor, bgColor, labelDesc, xLabel, yLabel, serif, callback);
-	}
-
-	/**
-	 * Draw a multiline LaTeX label.
-	 * 
-	 * @param app
-	 *            application
-	 * @param tempGraphics
-	 *            temporary graphics
-	 * @param geo
-	 *            geo
-	 * 
-	 * @param g2
-	 *            graphics
-	 * @param font
-	 *            font
-	 * @param fgColor
-	 *            color
-	 * @param bgColor
-	 *            background color
-	 * @param labelDesc
-	 *            LaTeX text
-	 * @param xLabel
-	 *            x-coord
-	 * @param yLabel
-	 *            y-coord
-	 * @param serif
-	 *            true touseserif font
-	 * @return bounds of resulting LaTeX formula
-	 */
-	public final GRectangle doDrawMultilineLaTeX(App app,
-			GGraphics2D tempGraphics, GeoElementND geo, GGraphics2D g2,
-			GFont font, GColor fgColor, GColor bgColor, String labelDesc,
-			int xLabel, int yLabel, boolean serif, Runnable callback) {
 		int fontSize = g2.getFont().getSize();
 		int lineSpread = (int) (fontSize * 1.0f);
 		int lineSpace = (int) (fontSize * 0.5f);
@@ -274,7 +175,7 @@ public abstract class EuclidianStatic {
 		String[] elements = blockSplit(labelDesc);
 
 		ArrayList<Integer> lineHeights = new ArrayList<Integer>();
-		lineHeights.add(new Integer(lineSpread + lineSpace));
+		lineHeights.add(lineSpread + lineSpace);
 		ArrayList<Integer> elementHeights = new ArrayList<Integer>();
 
 		int depth = 0;
@@ -289,7 +190,7 @@ public abstract class EuclidianStatic {
 			if (isLaTeX) {
 				// save the height of this element by drawing it to a temporary
 				// buffer
-				GDimension dim = AwtFactory.prototype.newDimension(0,0);
+				GDimension dim = AwtFactory.getPrototype().newDimension(0,0);
 				dim = app.getDrawEquation().drawEquation(app, geo,
 						tempGraphics, 0, 0, elements[i], font,
 						((GeoText) geo).isSerifFont(), fgColor, bgColor, false,
@@ -299,11 +200,11 @@ public abstract class EuclidianStatic {
 
 				// depth += dim.depth;
 
-				elementHeights.add(new Integer(height));
+				elementHeights.add(Integer.valueOf(height));
 
 				// check if this element is taller than every else in the line
 				if (height > (lineHeights.get(currentLine)).intValue()) {
-					lineHeights.set(currentLine, new Integer(height));
+					lineHeights.set(currentLine, Integer.valueOf(height));
 				}
 			} else {
 				elements[i] = elements[i].replaceAll("\\\\\\$", "\\$");
@@ -396,7 +297,7 @@ public abstract class EuclidianStatic {
 			isLaTeX = !isLaTeX;
 		}
 
-		return AwtFactory.prototype.newRectangle(xLabel - 3,
+		return AwtFactory.getPrototype().newRectangle(xLabel - 3,
 				yLabel - 3 + depth, width + 6, height + 6);
 
 	}
@@ -408,7 +309,7 @@ public abstract class EuclidianStatic {
 	 *            String to split
 	 * @return str split on $ but not \$
 	 */
-	private String[] blockSplit(String str) {
+	private static String[] blockSplit(String str) {
 		
 		// http://stackoverflow.com/questions/2709839/how-do-i-express-but-not-preceded-by-in-a-java-regular-expression
 		// negative lookbehind
@@ -472,8 +373,7 @@ public abstract class EuclidianStatic {
 	 *            true to use serif font
 	 * @return additional pixel needed to draw str (x-offset, y-offset)
 	 */
-	public static GPoint drawIndexedString(App app,
- GGraphics2D g3, String str,
+	public static GPoint drawIndexedString(App app, GGraphics2D g3, String str,
 			float xPos,
 			float yPos, boolean serif, boolean precise) {
 
@@ -609,24 +509,9 @@ public abstract class EuclidianStatic {
 	private static double measureString(String tempStr, GFont font,
 			GFontRenderContext frc) {
 		if (frc != null)
-			return AwtFactory.prototype.newTextLayout(tempStr, font, frc)
+			return AwtFactory.getPrototype().newTextLayout(tempStr, font, frc)
 					.getAdvance();
-		return StringUtil.prototype.estimateLength(tempStr, font);
-	}
-
-	/**
-	 * This hack was needed for ticket #3265
-	 */
-	protected void doFillAfterImageLoaded(GShape shape, GGraphics2D g3,
-			GBufferedImage gi, App app) {
-	}
-
-	/**
-	 * This hack was needed for ticket #3265
-	 */
-	public static void fillAfterImageLoaded(GShape shape, GGraphics2D g3,
-			GBufferedImage gi, App app) {
-		prototype.doFillAfterImageLoaded(shape, g3, gi, app);
+		return StringUtil.getPrototype().estimateLength(tempStr, font);
 	}
 
 	/**
@@ -699,7 +584,7 @@ public abstract class EuclidianStatic {
 		// labelRectangle.setLocation(xLabel, yLabel - fontSize);
 		int height = (int) ((lines + 1) * lineSpread);
 
-		return AwtFactory.prototype.newRectangle(xLabel - 3, yLabel - fontSize
+		return AwtFactory.getPrototype().newRectangle(xLabel - 3, yLabel - fontSize
 				- 3, xoffset + 6, height + 6);
 	}
 
