@@ -228,7 +228,7 @@ public class GeoPolyhedron extends GeoElement3D implements HasSegments,
 		// Application.debug(polygonsIndexMax);
 
 		// add to index
-		polygonsIndex.put(currentFace, new Integer(polygonsIndexMax));
+		polygonsIndex.put(currentFace, Integer.valueOf(polygonsIndexMax));
 		polygonsDescriptions.add(currentFace);
 		polygonsIndexMax++;
 
@@ -460,7 +460,7 @@ public class GeoPolyhedron extends GeoElement3D implements HasSegments,
 		// Application.debug(startPoint.getLabel() + endPoint.getLabel());
 
 		ConstructionElementCycle key = ConstructionElementCycle
-				.SegmentDescription((GeoElement) startPoint,
+				.segmentDescription((GeoElement) startPoint,
 						(GeoElement) endPoint);
 
 		// check if this segment is not already created
@@ -532,7 +532,7 @@ public class GeoPolyhedron extends GeoElement3D implements HasSegments,
 	 */
 	protected void storeSegment(GeoSegment3D segment,
 			ConstructionElementCycle key) {
-		Long index = new Long(segmentsIndexMax);
+		Long index = Long.valueOf(segmentsIndexMax);
 		segmentsIndex.put(key, index);
 		segments.put(index, segment);
 		segmentsIndexMax++;
@@ -544,7 +544,7 @@ public class GeoPolyhedron extends GeoElement3D implements HasSegments,
 		// Application.debug(startPoint.getLabel() + endPoint.getLabel());
 
 		ConstructionElementCycle key = ConstructionElementCycle
-				.SegmentDescription((GeoElement) startPoint,
+				.segmentDescription((GeoElement) startPoint,
 						(GeoElement) endPoint);
 
 		// check if this segment is already created
@@ -560,7 +560,7 @@ public class GeoPolyhedron extends GeoElement3D implements HasSegments,
 
 	public void addSegmentLinked(GeoSegmentND segment) {
 		ConstructionElementCycle key = ConstructionElementCycle
-				.SegmentDescription(segment.getStartPointAsGeoElement(),
+				.segmentDescription(segment.getStartPointAsGeoElement(),
 						segment.getEndPointAsGeoElement());
 
 		// Log.debug("linked : "+key);
@@ -1381,7 +1381,7 @@ public class GeoPolyhedron extends GeoElement3D implements HasSegments,
 		GeoPoint3D startPoint = getCopyPoint(s.getStartPoint());
 		GeoPoint3D endPoint = getCopyPoint(s.getEndPoint());
 		ConstructionElementCycle key = ConstructionElementCycle
-				.SegmentDescription(startPoint, endPoint);
+				.segmentDescription(startPoint, endPoint);
 
 
 		if (index >= segmentsIndexMax) {
@@ -2048,30 +2048,6 @@ public class GeoPolyhedron extends GeoElement3D implements HasSegments,
 			point.setEuclidianVisibleIfNoConditionToShowObject(false);
 		}
 		point.updateRepaint();
-	}
-
-	private void setPointSize(int size) {
-		for (GeoPoint3D point : pointsCreated) {
-			point.setEuclidianVisibleIfNoConditionToShowObject(true);
-			point.setPointSize(size);
-			point.updateRepaint();
-		}
-		if (getParentAlgorithm() != null) {
-			for (GeoElement point : getParentAlgorithm().getInput()) {
-				if (point.isGeoPoint()) {
-					point.setEuclidianVisibleIfNoConditionToShowObject(true);
-					((GeoPointND) point).setPointSize(size);
-					point.updateRepaint();
-				}
-			}
-		}
-	}
-
-	private void setPointNotVisibile() {
-		for (GeoPoint3D point : pointsCreated) {
-			point.setEuclidianVisibleIfNoConditionToShowObject(false);
-			point.updateRepaint();
-		}
 	}
 
 	@Override
